// Vitest Snapshot v1

exports[`Upload > Upload baseVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-4dac5dd5=""
>
  <div
    class="upload-title"
    data-v-4dac5dd5=""
  >
    单选上传
  </div>
  <div
    class="t-upload"
    data-v-4dac5dd5=""
  >
    
    
    <div
      class="t-upload__item t-upload__item--add"
    >
      <div
        class="t-upload__add-icon"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <input
      accept="image/png"
      hidden=""
      type="file"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Upload > Upload customVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-b50ff116=""
>
  <div
    class="upload-title"
    data-v-b50ff116=""
  >
    请上传身份证人像面
  </div>
  <div
    class="upload-content"
    data-v-b50ff116=""
  >
    <div
      class="t-upload front"
      data-v-b50ff116=""
    >
      
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          
          <div
            class="add-content"
            data-v-b50ff116=""
          >
            <div
              class="t-image t-image--square"
              data-v-b50ff116=""
              style="width: 32px; height: 32px;"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        type="file"
      />
      <!--v-if-->
    </div>
  </div>
  <div
    class="upload-title"
    data-v-b50ff116=""
  >
    请上传身份证国徽面
  </div>
  <div
    class="upload-content"
    data-v-b50ff116=""
  >
    <div
      class="t-upload reverse"
      data-v-b50ff116=""
    >
      
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          
          <div
            class="add-content"
            data-v-b50ff116=""
          >
            <div
              class="t-image t-image--square"
              data-v-b50ff116=""
              style="width: 32px; height: 32px;"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        type="file"
      />
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Upload > Upload mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Upload上传
  </h1>
  <p
    class="summary"
  >
    用于相册读取或拉起拍照的图片上传功能。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-4dac5dd5=""
      >
        <div
          class="upload-title"
          data-v-4dac5dd5=""
        >
          单选上传
        </div>
        <div
          class="t-upload"
          data-v-4dac5dd5=""
        >
          
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept="image/png"
            hidden=""
            type="file"
          />
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        多选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-5eaaef94=""
      >
        <div
          class="upload-title"
          data-v-5eaaef94=""
        >
          多选上传
        </div>
        <div
          class="t-upload"
          data-v-5eaaef94=""
          grid-config="[object Object]"
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept=""
            hidden=""
            multiple=""
            type="file"
          />
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        加载状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="upload-demo"
        data-v-12872376=""
      >
        <div
          class="upload-title"
          data-v-12872376=""
        >
          上传图片
        </div>
        <div
          class="t-upload"
          data-v-12872376=""
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              
              <svg
                class="t-icon t-icon-loading t-upload__progress-loading"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 2.25a9.75 9.75 0 000 19.5v-2.44A7.31 7.31 0 1119.31 12h2.44A9.75 9.75 0 0012 2.25z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                上传中...
              </div>
              
              <!---->
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              
              <svg
                class="t-icon t-icon-loading t-upload__progress-loading"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 2.25a9.75 9.75 0 000 19.5v-2.44A7.31 7.31 0 1119.31 12h2.44A9.75 9.75 0 0012 2.25z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                68%
              </div>
              
              <!---->
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept="image/png"
            hidden=""
            multiple=""
            type="file"
          />
          <!--v-if-->
        </div>
      </div>
      <div
        class="upload-demo__title"
        data-v-12872376=""
      >
        上传失败
      </div>
      <div
        class="upload-demo"
        data-v-12872376=""
      >
        <div
          class="upload-title"
          data-v-12872376=""
        >
          上传图片
        </div>
        <div
          class="t-upload"
          data-v-12872376=""
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              <svg
                class="t-icon t-icon-close-circle"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zM7.4 15.18L10.6 12 7.4 8.82 8.82 7.4 12 10.6l3.18-3.19 1.42 1.42L13.4 12l3.19 3.18-1.42 1.42L12 13.4 8.82 16.6 7.4 15.18z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                上传失败
              </div>
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept=""
            hidden=""
            multiple=""
            type="file"
          />
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 样式自定义
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-b50ff116=""
      >
        <div
          class="upload-title"
          data-v-b50ff116=""
        >
          请上传身份证人像面
        </div>
        <div
          class="upload-content"
          data-v-b50ff116=""
        >
          <div
            class="t-upload front"
            data-v-b50ff116=""
          >
            
            
            <div
              class="t-upload__item t-upload__item--add"
            >
              <div
                class="t-upload__add-icon"
              >
                
                <div
                  class="add-content"
                  data-v-b50ff116=""
                >
                  <div
                    class="t-image t-image--square"
                    data-v-b50ff116=""
                    style="width: 32px; height: 32px;"
                  >
                    <div
                      class="t-image__mask"
                    >
                      <div
                        class="t-loading"
                        style="font-size: 20px;"
                      >
                        <div
                          class="t-loading__dots"
                          style="animation-duration: 800ms; width: 20px; height: 20px;"
                        >
                          
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                          />
                          
                        </div>
                        <!---->
                        <!---->
                      </div>
                    </div>
                    <picture>
                      <!--v-if-->
                      <img
                        alt=""
                        class="t-image__img"
                        src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                        style="object-fit: fill; object-position: center;"
                      />
                    </picture>
                  </div>
                </div>
                
              </div>
            </div>
            <input
              accept="image/png"
              hidden=""
              type="file"
            />
            <!--v-if-->
          </div>
        </div>
        <div
          class="upload-title"
          data-v-b50ff116=""
        >
          请上传身份证国徽面
        </div>
        <div
          class="upload-content"
          data-v-b50ff116=""
        >
          <div
            class="t-upload reverse"
            data-v-b50ff116=""
          >
            
            
            <div
              class="t-upload__item t-upload__item--add"
            >
              <div
                class="t-upload__add-icon"
              >
                
                <div
                  class="add-content"
                  data-v-b50ff116=""
                >
                  <div
                    class="t-image t-image--square"
                    data-v-b50ff116=""
                    style="width: 32px; height: 32px;"
                  >
                    <div
                      class="t-image__mask"
                    >
                      <div
                        class="t-loading"
                        style="font-size: 20px;"
                      >
                        <div
                          class="t-loading__dots"
                          style="animation-duration: 800ms; width: 20px; height: 20px;"
                        >
                          
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                          />
                          
                        </div>
                        <!---->
                        <!---->
                      </div>
                    </div>
                    <picture>
                      <!--v-if-->
                      <img
                        alt=""
                        class="t-image__img"
                        src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                        style="object-fit: fill; object-position: center;"
                      />
                    </picture>
                  </div>
                </div>
                
              </div>
            </div>
            <input
              accept="image/png"
              hidden=""
              type="file"
            />
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Upload > Upload multipleVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-5eaaef94=""
>
  <div
    class="upload-title"
    data-v-5eaaef94=""
  >
    多选上传
  </div>
  <div
    class="t-upload"
    data-v-5eaaef94=""
    grid-config="[object Object]"
  >
    
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!--v-if-->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!--v-if-->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!--v-if-->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
    </div>
    
    <div
      class="t-upload__item t-upload__item--add"
    >
      <div
        class="t-upload__add-icon"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <input
      accept=""
      hidden=""
      multiple=""
      type="file"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Upload > Upload statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="upload-demo"
    data-v-12872376=""
  >
    <div
      class="upload-title"
      data-v-12872376=""
    >
      上传图片
    </div>
    <div
      class="t-upload"
      data-v-12872376=""
    >
      
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!--v-if-->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          
          <svg
            class="t-icon t-icon-loading t-upload__progress-loading"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.25a9.75 9.75 0 000 19.5v-2.44A7.31 7.31 0 1119.31 12h2.44A9.75 9.75 0 0012 2.25z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            上传中...
          </div>
          
          <!---->
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!--v-if-->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          
          <svg
            class="t-icon t-icon-loading t-upload__progress-loading"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.25a9.75 9.75 0 000 19.5v-2.44A7.31 7.31 0 1119.31 12h2.44A9.75 9.75 0 0012 2.25z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            68%
          </div>
          
          <!---->
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            fill="currentColor"
          />
        </svg>
      </div>
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        multiple=""
        type="file"
      />
      <!--v-if-->
    </div>
  </div>
  <div
    class="upload-demo__title"
    data-v-12872376=""
  >
    上传失败
  </div>
  <div
    class="upload-demo"
    data-v-12872376=""
  >
    <div
      class="upload-title"
      data-v-12872376=""
    >
      上传图片
    </div>
    <div
      class="t-upload"
      data-v-12872376=""
    >
      
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!--v-if-->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          <svg
            class="t-icon t-icon-close-circle"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zM7.4 15.18L10.6 12 7.4 8.82 8.82 7.4 12 10.6l3.18-3.19 1.42 1.42L13.4 12l3.19 3.18-1.42 1.42L12 13.4 8.82 16.6 7.4 15.18z"
              fill="currentColor"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            上传失败
          </div>
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            fill="currentColor"
          />
        </svg>
      </div>
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <input
        accept=""
        hidden=""
        multiple=""
        type="file"
      />
      <!--v-if-->
    </div>
  </div>
  
</div>
`;
